--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -7,7 +7,10 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
 
+    <a asp-action="Create" class="btn btn-default">Create New</a>
+</p>
 <table class="table table-striped table-hover">
 
     <thead>
@@ -24,7 +27,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
             </th>
-            <th></th>
+            <th>
+                
+            </th>
+           
         </tr>
     </thead>
     <tbody>
@@ -43,9 +49,11 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.BaseSalary)
                 </td>
-                <td><a asp-action="Edit" asp-rout-id="@item.Id">Edit</a></td>
-                <td><a asp-action="Details" asp-rout-id="@item.Id">Details</a></td>
-                <td><a asp-action="Delete" asp-rout-id="@item.Id">Delete</a></td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
             </tr>
             
         }
