--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -47,7 +47,7 @@
                     @Html.DisplayFor(modelItem => item.BirthDate)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.BaseSalary)
+                    R$@Html.DisplayFor(modelItem => item.BaseSalary)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
